# auger

./: .gitignore  README.md  auger.py  pylintrc  requirements.txt  setup.cfg  setup.py
auger/: __init__.py  __main__.py  app.py  ocr.py
auger/commands/: __init__.py  command.py  manager.py  stack.py  user.py
auger/document/: __init__.py  documents.py
auger/forms/: aboutdialog.py  mainwindow.py  resource.py  settingsdialog.py
auger/forms/controls/: __init__.py  augerapptoggler.py  augerlangbutton.py  augertextedit.py  augertoolbar.py  augerview.py
auger/forms/res/: stylesheet.qss  welcome.html
auger/forms/ui/: aboutdialog.ui  mainwindow.ui  settingsdialog.ui
auger/forms/utils/: html.py
auger/utils/: __init__.py  html.py
data/: org.m-flak.Auger.desktop
tests/: conftest.py  test_commands.py  test_image_ocr.py  test_tabs.py
