[metadata]
name = auger
version = attr: auger.__version__
description = A PyQt5 application for OCR with images
author = Matthew Kehrer
author_email = matt91.mek@gmail.com
url = https://github.com/m-flak/auger
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:

[options.package_data]
auger =
    forms/ui/*.ui
    forms/res/*.png
    forms/res/*.qss
